[gd_scene load_steps=2 format=3 uid="uid://dfmjq0xt5mmjo"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_524nk"]

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_524nk")

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MainMenuVBox" type="VBoxContainer" parent="AspectRatioContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="AspectRatioContainer/MainMenuVBox"]
layout_mode = 2
text = "Start"

[node name="LevelSelect" type="Button" parent="AspectRatioContainer/MainMenuVBox"]
layout_mode = 2
text = "Level Select"

[node name="QuitButton" type="Button" parent="AspectRatioContainer/MainMenuVBox"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="AspectRatioContainer/MainMenuVBox/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MainMenuVBox/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="pressed" from="AspectRatioContainer/MainMenuVBox/QuitButton" to="." method="_on_quit_button_pressed"]
